Modificación de las listas de dominio, disminuye el impacto en la base de datos y en el tamaño de la aplicación. Se crea la entidad, bean de manejo y página para la colección para el usuario final Se termina la puesta del tipo de dato Binary Se añaden las librerías de Bootstrap.

--- a/src/main/webapp/Collection.xhtml
+++ b/src/main/webapp/Collection.xhtml
@@ -59,7 +59,7 @@
 			 <div id="menu">
 				<ul>
 				    <li class="current_page_item">
-					   <h:link outcome="Collection.xhtml" onclick="#{specimenBean.displayList()}">Colección Entomológica</h:link>
+					   <h:link outcome="Collection.xhtml" onclick="#{specimenBean.findAllSpecimens()}">Colección Entomológica</h:link>
 				    </li>
 				    <li><a href="#" accesskey="4" title="">Sobre Nosotros</a></li>
 				    <li><a href="#" accesskey="5" title="">Contáctanos</a></li>
