--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -20,7 +20,7 @@
                 <div id="menu">
                     <ul>
                         <li>
-                            <h:outputLink value="Collection.xhtml" onclick="#{specimenBean.displayList()}">Colección Entomológica</h:outputLink>
+                            <h:outputLink value="Collection.xhtml" onclick="#{specimenBean.findAllSpecimens()}">Colección Entomológica</h:outputLink>
                         </li>
                         <li><a href="#" accesskey="4" title="">Sobre Nosotros</a></li>
                         <li><a href="#" accesskey="5" title="">Contáctanos</a></li>
