--- a/src/main/webapp/specimenDetail.xhtml
+++ b/src/main/webapp/specimenDetail.xhtml
@@ -2,17 +2,94 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	 xmlns:f="http://java.sun.com/jsf/core"
+	 xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://java.sun.com/jsf/html">
     <f:metadata>
 	   <f:viewParam name="idSpecimen" value="#{specimenContentBean.specimenDetail}" />
+	   <f:viewParam name="idSpecimen" value="#{specimenBean.specimenDetail}" />
     </f:metadata>
-    <h:body>
-        <div id="map" style="width: 500px; height: 400px;"></div>
+    <h:head>
+	   <script src="js/jquery-1.11.3.js" type="text/javascript"></script>
+	   <link href="css/sansPro.css" rel="stylesheet" />
+	   <link href="css/temporal.css" rel="stylesheet" />
+	   <h:outputStylesheet library="bootstrap" name="bootstrap.min.css" />
+	   <h:outputStylesheet library="bootstrap" name="bootstrap.min.css" />
+	   <h:outputScript library="bootstrap" name="bootstrap.min.js"/>	   
+    </h:head>
+    <h:body style="width: 768px">
+	   <div class="row">
+		  <div class="col-sm-8">
+			 <label class="titulo">#{specimenBean.specimen.commonName} (#{specimenBean.specimen.idTaxonomy.taxonomyName} #{specimenBean.specimen.specificEpithet})</label>
+			 <p:graphicImage value="#{specimenContentBean.getSpecimenThumb()}" width="100%">
+				<f:param name="idSpecimen" value="#{specimenContentBean.specimenDetail}" />
+			 </p:graphicImage>
+			 <label class="titulo">UBICACIÓN GEOGRÁFICA</label>
+			 <div id="map" style="width: 100%; height: 250px;"></div>
+		  </div>
+		  <div class="col-sm-4" style="max-height: 500px; overflow-y: scroll; overflow-x: hidden">
+			 <div class="row">
+				<div id="taxData">
+				    <label class="titulo">DATOS DE CLASIFICACIÓN</label>				    
+				</div>
+			 </div>
+			 <div class="row">
+				<div id="locData">
+				    <label class="titulo">DATOS DE UBICACIÓN</label>
+				</div>
+			 </div>
+			 <div class="row">
+				<div id="colData">
+				    <label class="titulo">DATOS DE COLECCIÓN</label>
+				</div>
+			 </div>
+		  </div>
+	   </div>
         <script src="https://maps.googleapis.com/maps/api/js"></script>
         <script>
+		  var specimenObj = #{specimenBean.printJSON()};
+		  $(window).load(function() {
+			 initialize();
+		  });
+
+		  $(window).ready(function() {
+			 if (specimenObj) {
+				if (specimenObj.error) {
+				    alert(specimenObj.error);
+				} else {
+				    var $taxData = $('#taxData');
+				    for (var obj in specimenObj.taxArray) {
+					   $taxData.append('<div class="row"><div class="col-sm-5"><label>' + specimenObj.taxArray[obj].label + ':</label></div><div class="col-sm-5">' + specimenObj.taxArray[obj].value + '</div></div>');
+				    }
+				    $taxData.append('<div class="row"><div class="col-sm-5"><label>Nombre Común:</label></div><div class="col-sm-5">' + specimenObj.taxData.commonName + '</div></div>');
+				    $taxData.append('<div class="row"><div class="col-sm-5"><label>Determinador:</label></div><div class="col-sm-5">' + specimenObj.taxData.determiner + '</div></div>');
+				    $taxData.append('<div class="row"><div class="col-sm-5"><label>Fecha de identificación:</label></div><div class="col-sm-5">' + specimenObj.taxData.idenDate + '</div></div>');
+				    $taxData.append('<div class="row"><div class="col-sm-5"><label>Epiteto específico:</label></div><div class="col-sm-5">' + specimenObj.taxData.specificEpithet + '</div></div>');
+				    var $locData = $('#locData');
+				    for (var obj in specimenObj.locArray) {
+					   $locData.append('<div class="row"><div class="col-sm-5"><label>' + specimenObj.locArray[obj].label + '</label></div><div class="col-sm-5">' + specimenObj.locArray[obj].value + '</div></div>');
+				    }
+				    $locData.append('<div class="row"><div class="col-sm-5"><label>Latitud:</label></div><div class="col-sm-5">' + specimenObj.locData.lat + '</div></div>');
+				    $locData.append('<div class="row"><div class="col-sm-5"><label>Longitud:</label></div><div class="col-sm-5">' + specimenObj.locData.lon + '</div></div>');
+				    $locData.append('<div class="row"><div class="col-sm-5"><label>Altitud:</label></div><div class="col-sm-5">' + specimenObj.locData.alt + '</div></div>');
+				    $locData.append('<div class="row"><div class="col-sm-5"><label>Colector:</label></div><div class="col-sm-5">' + specimenObj.locData.collector + '</div></div>');
+				    $locData.append('<div class="row"><div class="col-sm-5"><label>Fecha:</label></div><div class="col-sm-5">' + specimenObj.locData.collectDate + '</div></div>');
+				    $locData.append('<div class="row"><div class="col-sm-5"><label>Comentarios del colector:</label></div><div class="col-sm-5">' + specimenObj.locData.collectComment + '</div></div>');
+				    var $colData = $('#colData');
+				    $colData.append('<div class="row"><div class="col-sm-5"><label>Nombre de la Entidad:</label></div><div class="col-sm-5">' + specimenObj.colData.companyName + '</div></div>');
+				    $colData.append('<div class="row"><div class="col-sm-5"><label>Tipo de Registro:</label></div><div class="col-sm-5">' + specimenObj.colData.regType + '</div></div>');
+				    $colData.append('<div class="row"><div class="col-sm-5"><label>Tipo de Muestra:</label></div><div class="col-sm-5">' + specimenObj.colData.samType + '</div></div>');
+				    $colData.append('<div class="row"><div class="col-sm-5"><label>Nombre de la colección biológica:</label></div><div class="col-sm-5">' + specimenObj.colData.collectionName + '</div></div>');
+				    $colData.append('<div class="row"><div class="col-sm-5"><label>ID del registro biológico:</label></div><div class="col-sm-5">' + specimenObj.colData.idBioreg + '</div></div>');
+				    $colData.append('<div class="row"><div class="col-sm-5"><label>Numero de Catalogo:</label></div><div class="col-sm-5">' + specimenObj.colData.catalogName + '</div></div>');
+				}
+			 } else {
+				alert('No se ha podido cargar la información del espécimen');
+			 }
+		  });
+
 		  function initialize() {
 			 var mapCanvas = document.getElementById('map');
-			 var mapOptions = {zoom: 15};
+			 var mapOptions = {zoom: 10};
 			 var map = new google.maps.Map(mapCanvas, mapOptions);
 			 geocodeAddress(map);
 		  }
@@ -48,7 +125,6 @@
 			 });
 			 marker.setMap(map);
 		  }
-		  google.maps.event.addDomListener(window, 'load', initialize);
         </script>
     </h:body>
 </html>
