--- a/src/main/webapp/specimenDetail.xhtml
+++ b/src/main/webapp/specimenDetail.xhtml
@@ -10,11 +10,9 @@
     </f:metadata>
     <h:head>
 	   <script src="js/jquery-1.11.3.js" type="text/javascript"></script>
-	   <link href="css/sansPro.css" rel="stylesheet" />
-	   <link href="css/temporal.css" rel="stylesheet" />
-	   <h:outputStylesheet library="bootstrap" name="bootstrap.min.css" />
-	   <h:outputStylesheet library="bootstrap" name="bootstrap.min.css" />
-	   <h:outputScript library="bootstrap" name="bootstrap.min.js"/>	   
+	   <script src="bootstrap/js/bootstrap.js" type="text/javascript"></script>
+	   <link href="bootstrap/css/bootstrap.css" rel="stylesheet" />
+	   <link href="css/temporal.css" rel="stylesheet" />	   
     </h:head>
     <h:body style="width: 768px">
 	   <div class="row">
