--- a/src/main/webapp/FamiliesCollection.xhtml
+++ b/src/main/webapp/FamiliesCollection.xhtml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html	xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+	 xmlns:p="http://primefaces.org/ui"
+	 xmlns:ui="http://java.sun.com/jsf/facelets"
+	 xmlns:f="http://java.sun.com/jsf/core">
     <head>
-	   <meta charset="utf-8"/>
-	   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-	   <meta name="description" content=""/>
-	   <meta name="author" content=""/>
-	   <title>Colección Entomológica Virtual</title>
+        <title>Colección Entomológica 3D - Bichos</title>
 	   <link href="bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet"/>
-	   <link href="css/default.css" type="text/css" rel="stylesheet" />
+        <link href="css/default.css" type="text/css" rel="stylesheet"/>
+	   <link href="css/collage/transitions.css" type="text/css" rel="stylesheet"/>
+	   <link href="css/collage/collage.css" type="text/css" rel="stylesheet"/>
+	   <link href="js/fancybox/jquery.fancybox.css?v=2.1.5" type="text/css" rel="stylesheet" media="screen"/>
+	   <script src="js/jquery-1.11.3.js" type="text/javascript"></script>
+	   <script src="bootstrap/js/bootstrap.js" type="text/javascript"></script>
+	   <script src="js/collage/jquery.collagePlus.js" type="text/javascript" />
+	   <script src="js/collage/extras/jquery.collageCaption.js" type="text/javascript" />
+	   <script src="js/collage/extras/jquery.removeWhitespace.js" type="text/javascript" />
+	   <script src="js/fancybox/jquery.fancybox.js?v=2.1.5" type="text/javascript" />
     </head>
     <body style="padding-top: 10px;">
 	   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -59,7 +67,7 @@
 					   </div>
 					   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						  <ul class="nav navbar-nav navbar-right">
-							 <li><h:outputLink value="FamiliesCollection.xhtml">Colección Entomológica</h:outputLink></li>
+							 <li><h:outputLink value="Collection.xhtml">Colección Entomológica</h:outputLink></li>
 							 <li><a href="#">Contacto</a></li>
 							 <li><a href="#">Acerca</a></li>
 							 <li><a href="pages/login.xhtml">Ingreso</a></li>
@@ -69,45 +77,24 @@
 				</nav>
 			 </div>
 		  </div>
-		  <div class="row">
-			 <div class="col-md-8">
-				<div class="panel panel-default">
-				    <div class="panel-heading">Colección Entomológica Virtual</div>
-				    <div class="panel-body">
-					   <div class="row">
-						  <div class="col-md-6">
-							 <img class="img-responsive" src="images/fondo_light.jpg" alt=""/>
-						  </div>
-						  <div class="col-md-6">
-							 La Universidad Central, lleva a otros niveles la presentación de la colecciones biológicas. En este proyecto nos dedicamos a llevar a la colección entomológica del Centro de Biosistemas de la Universidad Jorge Tadeo Lozano, a una dimensión virtual donde es posible su visualización en 3D, conservado todas sus características.
-						  </div>
-					   </div>
-				    </div>
-				    <div class="list-group">
-					   <h:outputLink value="FamiliesCollection.xhtml" class="list-group-item">Colección Entomológica</h:outputLink>
-					   <a href="http://www.ucentral.edu.co" class="list-group-item">Universidad Central</a>
-					   <a href="http://www.utadeo.edu.co/es/micrositio/centro-de-bio-sistemas" class="list-group-item">UJTL Centro de Biosistemas</a>
-					   <a href="http://commons.com.co/index.php/" class="list-group-item">Grupo Commons U. Central</a>
-				    </div>
-				</div>
-			 </div>
+		  <h:outputText value="&lt;div class=&quot;row&quot;&gt;" escape="false" />
+		  <ui:repeat value="#{specimenContentBean.families}" var="fam" varStatus="stat">
+			 <h:outputText value="&lt;/div&gt;&lt;div class=&quot;row&quot;&gt;" escape="false" rendered="#{stat.index % 3 == 0}" />
 			 <div class="col-md-4">
-				<div class="panel panel-default">
-				    <div class="panel-heading">Noticias</div>
-				    <div class="panel-body">
-					   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-					   <hr/>
-					   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-				    </div>
-				</div>
-				<div class="panel panel-default">
-				    <div class="panel-heading">Eventos</div>
-				    <div class="panel-body">
-					   <img class="img-responsive" src="images/banner/avispa.jpg" alt=""/>
+				<div class="thumbnail">
+				    <p:graphicImage value="#{specimenContentBean.getFamilyThumb()}">
+					   <f:param name="idTaxonomy" value="#{fam.idTaxonomy}" />
+				    </p:graphicImage>
+				    <div class="caption">
+					   <h3>#{fam.taxonomyName}</h3>
+					   <p>
+						  <a href="Collection.xhtml" class="btn btn-success" role="button">Ver Ejemplares</a>
+					   </p>
 				    </div>
 				</div>
 			 </div>
-		  </div>
+		  </ui:repeat>
+		  <h:outputText value="&lt;/div&gt;" escape="false" />
 	   </div>
 	   <div class="container">
 		  <hr/>
@@ -121,7 +108,29 @@
 			 </div>
 		  </footer>
 	   </div>
-	   <script src="js/jquery-1.11.3.js" type="text/javascript"></script>
-	   <script src="bootstrap/js/bootstrap.js" type="text/javascript"></script>
-    </body>
+	   <script type="text/javascript">
+		  $(window).load(function() {
+			 $(document).ready(function() {
+				collage();
+				$('.Collage').collageCaption();
+			 });
+			 $(".fancybox").fancybox();
+		  });
+
+		  function collage() {
+			 $('.Collage').removeWhitespace().collagePlus({
+				'fadeSpeed': 2000,
+				'targetHeight': 200
+			 });
+		  }
+
+		  var resizeTimer = null;
+		  $(window).bind('resize', function() {
+			 $('.Collage .Image_Wrapper').css("opacity", 0);
+			 if (resizeTimer)
+				clearTimeout(resizeTimer);
+			 resizeTimer = setTimeout(collage, 200);
+		  });
+        </script>
+    </body>    
 </html>
