--- a/src/main/webapp/pages/login.xhtml
+++ b/src/main/webapp/pages/login.xhtml
@@ -4,13 +4,32 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <h:outputStylesheet library="css" name="pstyle.css" />
-        <h:outputStylesheet library="css" name="../bootstrap/css/bootstrap.min.css" />
+        <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     </h:head>
     <h:body>
-
         <h:form id="loginForm">
-            <p:growl id="growl" showDetail="true"></p:growl>            
+            <p:growl id="growl" showDetail="true"></p:growl>
+
+            <div class="container">
+
+                <form class="form-signin">
+                    <h2 class="form-signin-heading">Please sign in</h2>
+                    <label for="inputEmail" class="sr-only">Email address</label>
+                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus=""/>
+                    <label for="inputPassword" class="sr-only">Password</label>
+                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" />
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" value="remember-me"/> Remember me
+                        </label>
+                    </div>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                </form>
+
+            </div>
+
+
+
             <h:outputText value="Usuario:"/>
             <p:inputText id="user" value="#{loginBean.user}" required="true" requiredMessage="Debe ingresar un nombre de usuario"/>
             <h:outputText value="Password:"/>
