--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -62,7 +62,7 @@
                                     <li><h:outputLink value="FamiliesCollection.xhtml">Colección Entomológica</h:outputLink></li>
                                     <li><a href="#">Contacto</a></li>
                                     <li><a href="#">Acerca</a></li>
-                                    <li><a href="pages/login.xhtml">Ingreso</a></li>
+                                    <li><a href="login.xhtml">Ingreso</a></li>
                                 </ul>
                             </div>
                         </div>
